welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:3: error: not found: value tab
	for (n <- 0 to tab.length-1)
                       ^