welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,value:Int): Int = 
{
	for (n <- 0 to tab.length-1)
	{
		if (nums(n)==value)
		{
			return n
		}
		return -1
	}
}
